<resources>
    <string name="app_name">TopReads</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Explore</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_notifications">Account</string>
    <string name="name">Book Name</string>
    <string name="title_activity_book_video_summary">BookVideoSummaryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="email_optional">Email ( optional )</string>


    <string name="email_required">Email ( required )</string>
    <string name="description_should_not_empty">Description should not empty</string>
    <string name="send_your_suggestion">Send your suggestion</string>
    <string name="cancel">Cancel</string>
    <string name="elitereads">TopReads</string>
    <string name="app_version">Version: 1.0</string>
    <string name="audio_summary">Audio Summary</string>
    <string name="freebook_downloader">FreeBook Downloader</string>
    <string name="text_summary">Text Summary</string>
    <string name="email_id">Email id</string>

    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="get_new_password">Get New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="login_title">Login</string>
    <string name="password_hint">Password</string>
    <string name="forget_password_hint">Forget Password?</string>
    <string name="sign_in_text">Sign In</string>
    <string name="need_an_account_text">Need an account?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="or_text">Or</string>
    <string name="continue_with_google_text">Continue with Google</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="welcome_to_elitereads_text">Welcome to TopReads</string>
    <string name="sign_up_with_email_text">Sign Up with Email</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="by_continuing_you_are_accept_our_terms_of_services_and_privacy_policy">By continuing, you are declaring that you accept our Terms of Services and Privacy Policy.</string>
    <string name="sign_up_with_email_title">Sign Up With Email</string>
    <string name="enter_valid_email_address">Enter Valid Email Address</string>
    <string name="valid_password_is_not_valid">Valid Password is not valid</string>
    <string name="elitereads_splash_appName_text">TopReads</string>
    <string name="video_summary_toolbar_title">Video Summary</string>
    <string name="most_recommended_recommended_books_toolbar_title">Most Recommended Books</string>
    <string name="all_recommenders_toolbar_title">All Recommenders</string>
    <string name="book_details_toolbar_text">Book Details</string>
    <string name="steve_jobs_biography_walter_text">Steve Jobs Biography: Walter</string>
    <string name="author_book_details_text">Author:</string>
    <string name="tonny_robbin_plceholder_text">Tonny Robbin</string>
    <string name="released_bookDetails_placeholder_text">Released:</string>
    <string name="release_date_bookDetails_placeholder_text">15 March 2000</string>
    <string name="get_it_on_amazon_text">Get It On Amazon</string>
    <string name="book_summary_buttons_heading">Book Summary</string>
    <string name="read_summary_button_placehoder_text">Read</string>
    <string name="lister_summary_button_placehoder_text">Listen</string>
    <string name="watch_summary_button_placehoder_text">Watch</string>
    <string name="freebooks_button_text">FreeBooks Pdf</string>
    <string name="magnet_book_torrent_dd_text">Magnet Book Torrent</string>
    <string name="book_description_heading_text">Short Book Review</string>
    <string name="book_description_text_placeholder">Steve Jobs is the authorized self-titled biography of American business magnate and Apple co-founder Steve Jobs. The book was written at the request of Jobs by Walter Isaacson, a former executive at CNN and TIME who has written best-selling biographies of Benjamin Franklin and Albert Einstein.</string>
    <string name="read_more_text">Read more</string>
    <string name="book_recommended_by_text">Book Recommended By</string>
    <string name="recommendation_quotes_text">Recommendation Quotes</string>
    <string name="recommender_details_title">Elon Musk</string>
    <string name="recommender_bio_placeholder_text">Elon Reeve Musk FRS is an entrepreneur, investor, and business magnate. He is the founder, CEO, and Chief Engineer at SpaceX; early-stage investor, CEO, and Product Architect of Tesla, Inc.; founder of The Boring Company; and co-founder of Neuralink and OpenAI is an entrepreneur, investor, and business magnate. He is the founder, CEO, and Chief Engineer at SpaceX; early-stage investor, CEO, and Product Architect of Tesla, Inc.; founder of The Boring Company; and co-founder of Neuralink and OpenAI.</string>
    <string name="recommended_books_heading">Recommended Books</string>
    <string name="are_you_sure_you_want_to_log_out_dailog_title">Are you sure you want to Log Out?</string>
    <string name="no_option_text_logout_dailog">No</string>
    <string name="yes_option_text_logout_dailog">Yes</string>
    <string name="filter_by_tag_bottomsheet_title">Filter by Tag</string>
    <string name="close_filter_bottomsheet_button">Close</string>
    <string name="apply_filter_button_text">Apply</string>
    <string name="dark_mode_fragment_title_toolbar">Dark Mode</string>
    <string name="dark_mode_title_choose_to_change_your_elitereads_theme">Choose to change your TopReads Theme</string>
    <string name="dark_mode_radio_text">Dark Mode</string>
    <string name="light_mode_radio_text">Light Mode</string>
    <string name="explore_fragment_title">Explore</string>
    <string name="please_log_in_to_access_favorites">Please Log In to access favorites</string>
    <string name="log_in_button_favorites_text">Log In</string>
    <string name="favorites_fragment_toolbar_title">Favorites</string>
    <string name="elitereads_app_name">TopReads</string>
    <string name="home_heading_recommended_books_by">Recommended Books By</string>
    <string name="home_heading_most_recommended_bitcoin_books">Most Recommended Bitcoin Books</string>
    <string name="view_all_home_fragment_text">View All</string>
    <string name="home_heading_most_recommended_tech_books">Most Recommended Tech Books</string>
    <string name="home_heading_most_recommended_biography_books">Most Recommended Biographies</string>
    <string name="most_home_heading_recommended_investment_books">Most Recommended Investment Books</string>
    <string name="rate_us_fragment_toolbar_title">Rate Us</string>
    <string name="update_app_fragment_toolbar_title">TopReads Needs Update</string>
    <string name="are_you_enjoying_elitereads_rate_us_text">Are you enjoying TopReads?</string>
    <string name="high_five_rating_text">High Five!</string>
    <string name="we_are_sorry_rating_fragment_two">We are sorry...</string>
    <string name="please_help_use_know_rating_ragment_two_text">Please help use know how we can improve our app by contacting us.</string>
    <string name="give_your_suggestion_rating_fragment_two">Give your suggestion</string>
    <string name="download_update_text">DOWNLOAD</string>

    <string name="update_message_update_dialog_text">This version of TopReads became obsolete now. Please go to Google Play store to download the latest version!</string>

    <string name="cancel_rating_fragment_two_text">Cancel</string>
    <string name="user_name_placeholder_settings_fragment">User</string>
    <string name="sign_up_to_save_your_favorites_settings_fragment">Sign Up to save your favorites</string>
    <string name="sign_up_settings_fragment">Sign up</string>
    <string name="sign_in__settings_fragment">Sign In</string>
    <string name="basic_settings_fragment_heading">Basic Settings</string>
    <string name="dark_mode_text_settings_fragment">Dark Mode</string>
    <string name="dark_mode_on_off_text__settings_fragment">Off</string>
    <string name="app_general_heading_text_settings_fragment">App General</string>
    <string name="contact_support_text_settings_fragment">Contact Support</string>
    <string name="rate_this_app_text_settings_fragment">Rate this App</string>
    <string name="share_this_app_text_settings_fragment">Share this App</string>
    <string name="give_us_feedback_suggestions_text_settings_fragment">Give Us Feedback / Suggestions</string>
    <string name="terms_and_conditions_text__settings_fragment">Terms and Conditions</string>
    <string name="about_elitereads_text_settings_fragment">About TopReads</string>
    <string name="app_version_text_settings_fragment">App Version: 1.0</string>
    <string name="app_version_code">1.0</string>
    <string name="log_out_text_settings_fragment">Log out</string>
    <string name="book_recommender_name_text_item">Elon Musk</string>
    <string name="book_recommender_books_count_text_item">23 books</string>
    <string name="explore_books_item_genre_text_">Technology</string>
    <string name="book_item_book_namez_paceholder">Steve Jobs Biography: Walter Isaason</string>
    <string name="author_label_text_bookItem">Author:</string>
    <string name="author_name_text_plceholder_bookItem">Walter Isaacson</string>
    <string name="published_date_text_plceholder_bookItem">Published:</string>
    <string name="dark_mode_dialog_choose_app_theme_text">Choose App Theme</string>
    <string name="dark_mode_option_dialog">Dark Mode</string>
    <string name="light_mode_dialog">Light Mode</string>
    <string name="system_default_option_dialog">System Default</string>
    <string name="no_favorites_added">No Favorites Added</string>
    <string name="you_have_not_not_added_any_favorites">You have not not added any favorites</string>
    <string name="no_internet_connection">No Internet Connection Found</string>
    <string name="no_internet_connections_found_text">Please check your internet connection or try again later</string>
    <string name="try_again_button_text">Try Again</string>
    <string name="no_results_found">No Results Found</string>
    <string name="try_a_more_general_keyword">Try a more general keyword</string>
    <string name="search_again">Search Again</string>
    <string name="about_app_toolbar_title">About</string>
    <string name="open_source_licences_tv_text">Open source licences</string>
    <string name="elitereads_project_resources_attributions_tv_text">TopReads resources attributions</string>
    <string name="custom_license_title">Open source credits and licenses</string>
</resources>