<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.titanreads.topreads.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.titanreads.topreads.ui.fragments.ExploreFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.titanreads.topreads.ui.fragments.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.titanreads.topreads.ui.fragments.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" >

        <action
            app:enterAnim="@anim/slide_in_from_right"
            app:exitAnim="@anim/slide_out_to_left"
            android:id="@+id/action_fragmentSettings_to_fragmentDarkMode"
            app:destination="@id/fragmentDarkModeSettings" />


    </fragment>


    <fragment
        android:id="@+id/fragmentDarkModeSettings"
        android:name="com.titanreads.topreads.ui.fragments.SettingsFragment"
        android:label="fragment_one"
        tools:layout="@layout/fragment_dark_mode">

        <action
            android:id="@+id/action_fragmentDarkModeSettings_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>
</navigation>