<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round_edge_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView

        android:padding="@dimen/_10sdp"
        android:textColor="@color/toolbar_text_color"
        android:gravity="center"
        android:textSize="@dimen/_18ssp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/dark_mode_dialog_choose_app_theme_text" />

    <View
        style="@style/profile_menu_sep"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@id/tv_rate_us_settings_tab" />



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_ViewAllBooksActivity">



        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group_darkMode_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton android:id="@+id/radio_darkMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode_option_dialog"
                />
            <RadioButton android:id="@+id/radio_lightMode"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_mode_dialog" />

            <RadioButton android:id="@+id/radio_systemDefaultMode"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_default_option_dialog"
                />
        </RadioGroup>



    </androidx.appcompat.widget.LinearLayoutCompat>




</androidx.appcompat.widget.LinearLayoutCompat>