<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.RatingOneFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_favori99tesppppppp_books"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:background="@color/toolbar_background_color"
        android:elevation="@dimen/toolbar_elevation"        android:tag="layout/toolbar_with_back_btn_0"
        app:contentInsetEnd="0.0dip"

        app:contentInsetLeft="0.0dip"
        app:contentInsetRight="0.0dip"
        app:contentInsetStart="0.0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ib_back_rating_feedbackActivity"
            android:layout_width="@dimen/spacing_mxlarge"
            android:layout_height="@dimen/spacing_mxlarge"
            android:layout_gravity="left"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            app:tint="@color/toolbar_tint_color"
            app:srcCompat="@drawable/ic_baseline_arrow_back"
           />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/give_feedback"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/toolbar_text_color"
            android:textStyle="bold"
            />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imagjuueView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_favori99tesppppppp_books"
        tools:src="@tools:sample/avatars" />



    <LinearLayout
        android:id="@+id/linearLayout33"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_90sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="40dp"
        app:layout_constraintTop_toBottomOf="@+id/imagjuueView"
        tools:layout_editor_absoluteY="321dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/email_optional"
            android:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email_FeedbackActivity"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_4sdp"


            android:hint="@string/email_id"
            android:padding="0.0dp"
            app:boxStrokeErrorColor="@color/design_dark_default_color_error"
            app:errorIconTint="@color/design_dark_default_color_error"
            app:errorTextColor="@color/design_dark_default_color_error"
            app:helperTextEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_FeedbackActivity"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:inputType="textEmailAddress"
                android:padding="0.0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/err_text_email_FeedbackActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/enter_valid_email_address"
            android:textColor="@color/design_dark_default_color_error"
            android:visibility="invisible" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/email_required"

            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description_FeedbackActivity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxStrokeErrorColor="@color/design_dark_default_color_error"
            app:errorIconTint="@color/design_dark_default_color_error"
            app:errorTextColor="@color/design_dark_default_color_error"
            android:hint="Description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description_FeedbackActivity"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:lines="4"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/err_text_description_FeedbackActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="left"
            android:textSize="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/description_should_not_empty"
            android:textColor="@color/design_dark_default_color_error"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayo77ut33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout33"
        tools:layout_editor_absoluteY="321dp">

        <TextView
            android:id="@+id/send_feedback_btn_feedBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_your_suggestion"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textSize="15sp"
            style="@style/registerFlowButtons"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.478" />

        <TextView
            android:id="@+id/cancel_btn_feedBackActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/cancel"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.478" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elitereads"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"

            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>